syntax = "proto3";

package taskmanager;

option go_package = "github.com/maciekb2/task-manager/proto";

// Definicja serwisu
service TaskManager {
  rpc SubmitTask (TaskRequest) returns (TaskResponse);
  rpc CheckTaskStatus (StatusRequest) returns (StatusResponse);
  rpc StreamTaskStatus (StatusRequest) returns (stream StatusResponse); // Strumieniowanie statusów
  rpc GetStatistics(StatisticsRequest) returns (StatisticsResponse);
}

// Wiadomości
message TaskRequest {
  string task_description = 1;
  string priority = 2; // "LOW", "MEDIUM", "HIGH"
}

message TaskResponse {
  string task_id = 1;
}

message StatusRequest {
  string task_id = 1;
}

message StatusResponse {
  string status = 1; // "QUEUED", "IN_PROGRESS", "COMPLETED", "FAILED"
}

message StatisticsRequest {}

message StatisticsResponse {
  int32 queued = 1;
  int32 in_progress = 2;
  int32 completed = 3;
  int32 failed = 4;
}
